# steamdeck-dolphin-syncer

./: Cargo.toml
dolphinsavesync-frontend/: Cargo.toml
dolphinsavesync-frontend/src/: app.rs  main.rs
dolphinsavesync-frontend/src/components/: save_slot.rs
dolphinsavesync-frontend/src/views/: mod.rs  save_screen.rs
savefilesource/: Cargo.toml
savefilesource-dropbox/: Cargo.toml
savefilesource-dropbox/src/: lib.rs  main.rs
savefilesource/src/: lib.rs
