[package]
authors = ["daniel <doperez1997@gmail.com>"]
description = "Small crate that implements a CloudHandler for Dropbox to sync files"
edition = "2021"
license = "MIT"
name = "dropbox-cloudhandler"
version = "0.0.1"

[dependencies]
dolphinsavesync-fs = { path = "../savefilesource" }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"